--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -7,9 +7,8 @@
 			for reporting your progress to your funders.
 		</p> -->
 
-		<div class="dialog__video" style="text-align: center;">
+		<div class="dialog__video video-iframe">
 			<iframe width="600" height="320" src="https://www.youtube.com/embed/tSEjnOoGHBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<!-- <h3 style="margin-top: 50px;">Coming Soon</h3> -->
 		</div>
 		<ng-template #footer>
 			<button id="getStartedButton" nz-button nzType="primary" *ngIf="closable" (click)="close()" class="dialog__lower-close-btn default-button">Get Started!</button>
