--- a/src/app/manage-indicators/manage-indicators.component.scss
+++ b/src/app/manage-indicators/manage-indicators.component.scss
@@ -7,3 +7,12 @@ tr:hover {
         color: white;
     }
 }
+
+.col_indicator {
+    margin-bottom: 30px;
+    margin-top: 50px;
+}
+
+.inpt_group {
+    margin-top: 5px;
+}
