--- a/src/app/pages/dataprotection/dataprotection.component.html
+++ b/src/app/pages/dataprotection/dataprotection.component.html
@@ -1,16 +1,11 @@
-<nz-layout style="background-color: white;">
-  <section style="text-align: left;
-  background-color: rgb(233, 233, 233);
-  border-radius: 15px;">
-    <h1 style="font-size: 40px;
-  text-align: center;
-  font-family:montserrat, sans-serif;
-  padding: 25px;">
+<nz-layout class="clr_white">
+  <section class="data_section">
+    <h1 class="data_h1">
       <b>Data Protection Declaration</b>
     </h1><br>
-    <div nz-row style="font-size:13.75px;">
-      <div nz-col nzSpan="10" nzOffset="1" style="font-family:montserrat, sans-serif;">
-        <span style="font-size: 20px;">
+    <div nz-row class="row_size">
+      <div nz-col nzSpan="10" nzOffset="1" class="col_family">
+        <span class="col_span_size">
           <h1><b>Datenschutzerklärung</b></h1>
         </span>
         <p>Soweit nachstehend keine anderen Angaben gemacht werden, ist die
@@ -146,8 +141,8 @@
           betroffenen Daten zum Zwecke der Direktwerbung</p>
       </div>
 
-      <div nz-col nzSpan="10" nzOffset="2" style="font-family:montserrat, sans-serif;">
-        <span style="font-size: 22px;">
+      <div nz-col nzSpan="10" nzOffset="2" class="col_family">
+        <span class="span_size">
           <h1><b>Data protection declaration</b></h1>
         </span>
         <p>Unless stated otherwise below, the provision of your personal data is
