--- a/src/app/pages/dataprotection/dataprotection.component.scss
+++ b/src/app/pages/dataprotection/dataprotection.component.scss
@@ -1,3 +1,36 @@
 section {
   margin: 40px;
 }
+
+.clr_white {
+  background-color: white;
+}
+
+.data_section {
+  text-align: left;
+  background-color: rgb(233, 233, 233);
+  border-radius: 15px;
+}
+
+.data_h1 {
+  font-size: 40px;
+  text-align: center;
+  font-family: montserrat, sans-serif;
+  padding: 25px;
+}
+
+.row_size {
+  font-size: 13.75px;
+}
+
+.col_family {
+  font-family: montserrat, sans-serif;
+}
+
+.col_span_size {
+  font-size: 20px;
+}
+
+.span_size {
+  font-size: 22px;
+}
