--- a/src/app/pages/imprint/imprint.component.html
+++ b/src/app/pages/imprint/imprint.component.html
@@ -1,51 +1,59 @@
 <nz-layout style="background-color:  white;
-align-items: center;">
- <section style="text-align: left;
-background-color:  white;
-padding: 8rem 5rem;">
-     <div nz-row style="font-size:15px;
-     background-color: rgb(233, 233, 233);
-     padding: 25px;
-         border-radius: 15px;
-         border-top-left-radius: 15px;
-         box-shadow: 0px 3px 6px #00000029;
-         max-width: 1000px;">
-         <h3 style="font-size: 2.5rem;
-         text-align: center;
-         font-family:montserrat, sans-serif;">
-             Imprint
-         </h3>
-         <hr>
-         <div nz-col nzSpan="10" nzOffset="0" style="font-family:montserrat, sans-serif;">
-             <h1><b>Logframe Lab ist ein Projekt von:</b></h1>
-             <p><b>Arqaam GmbH</b> <br>
-                 Winterhuder Weg 29, <br>
-                 22085 Hamburg <br>
-                 Deutschland <br>
-             </p><br>
-             <p><b>Geschäftführerin:</b> Ann-Katrina Bregovic</p>
-             <p><b>E-Mail:</b> info (at) arqaam (punkt) eu <br>
-                 <b>Telefon:</b> +49(0) 162 57 30 459</p>
-             <p><b>Registergericht: </b>Amtsgericht Hamburg <br>
-                 <b>Registernummer: </b>HRB 148532</p>
-             <p><b>Umsatzsteuer-Identifikationsnummer gem. § 27 a Umsatzsteuergesetz: </b>DE314783355</p>
-         </div>
-         <div nz-col nzSpan="11" nzOffset="2" style="font-family:montserrat;">
-             <h1><b>Logframe Lab is a project of:</b></h1>
-             <p><b>Arqaam GmbH</b><br>
-                 Winterhuder Weg 29, <br>
-                 22085 Hamburg <br>
-                 Germany <br>
-             </p><br>
-             <p><b>Managing Director: </b> Ann-Katrina Bregovic</p>
-             <p><b>E-Mail: </b>info (at) arqaam (dot) eu <br>
-                 <b>Phone: </b> +49(0) 162 57 30 459
-             </p>
-             <p><b>Registrar of companies: </b>District Court Hamburg <br>
-                 <b>Registration number: </b>HRB 148532</p>
-             <p><b>Value Added Tax Identification Number according to § 27 a Value Added Tax Act: </b>DE314783355</p>
-
-         </div>
-     </div>
- </section>
+  align-items: center;">
+  <section style="text-align: left;
+    background-color:  white;
+    padding: 8rem 5rem;">
+    <div nz-row style="font-size:15px;
+      background-color: rgb(233, 233, 233);
+      padding: 25px;
+      border-radius: 15px;
+      border-top-left-radius: 15px;
+      box-shadow: 0px 3px 6px #00000029;
+      max-width: 1000px;">
+      <h3 style="font-size: 2.5rem;
+        text-align: center;
+        font-family:montserrat, sans-serif;">
+        Imprint
+      </h3>
+      <hr>
+      <div nz-col nzSpan="10" nzOffset="0" style="font-family:montserrat, sans-serif;">
+        <h1><b>Logframe Lab ist ein Projekt von:</b></h1>
+        <p><b>Arqaam GmbH</b> <br>
+          Winterhuder Weg 29, <br>
+          22085 Hamburg <br>
+          Deutschland <br>
+        </p><br>
+        <p>
+          <b>Geschäftführerin:</b> Ann-Katrina Bregovic
+        </p>
+        <p>
+          <b>E-Mail:</b> info (at) arqaam (punkt) eu <br>
+          <b>Telefon:</b> +49(0) 162 57 30 459</p>
+        <p><b>Registergericht: </b>Amtsgericht Hamburg <br>
+          <b>Registernummer: </b>HRB 148532</p>
+        <p><b>Umsatzsteuer-Identifikationsnummer gem. § 27 a Umsatzsteuergesetz: </b>DE314783355</p>
+      </div>
+      <div nz-col nzSpan="11" nzOffset="2" style="font-family:montserrat;">
+        <h1><b>Logframe Lab is a project of:</b></h1>
+        <p><b>Arqaam GmbH</b><br>
+          Winterhuder Weg 29, <br>
+          22085 Hamburg <br>
+          Germany <br>
+        </p><br>
+        <p>
+          <b>Managing Director: </b> Ann-Katrina Bregovic
+        </p>
+        <p>
+          <b>E-Mail: </b>info (at) arqaam (dot) eu <br>
+          <b>Phone: </b> +49(0) 162 57 30 459
+        </p>
+        <p>
+          <b>Registrar of companies: </b>District Court Hamburg <br>
+          <b>Registration number: </b>HRB 148532</p>
+        <p>
+          <b>Value Added Tax Identification Number according to § 27 a Value Added Tax Act: </b>DE314783355
+        </p>
+      </div>
+    </div>
+  </section>
 </nz-layout>
