--- a/src/app/pages/indicator/visualization/visualization.component.html
+++ b/src/app/pages/indicator/visualization/visualization.component.html
@@ -8,10 +8,7 @@
 >
   <div>
     <div id="toolbar" class="steps-action">
-      <button
-        (click)="isFullscreen = !isFullscreen"
-        class="steps-button ant-btn toolbar-btn fullscreen-btn"
-      >
+      <button (click)="isFullscreen = !isFullscreen" class="steps-button ant-btn toolbar-btn fullscreen-btn">
         <i
           nz-icon
           style="font-size: 18px"
