--- a/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.scss
+++ b/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.scss
@@ -1,11 +1,34 @@
 .ant-slider-track {
     background-color: #453457;
 }
+
 .similar-indicator {
     background-color: rgba(69,52,87, 0.65);
 }
+
 tr:hover {
     a {
         color:white;
     }
+}
+
+.nz_col{
+    margin-bottom: 30px;
+    margin-top: 50px;
+}
+
+.nz_approve_col {
+    margin-right: 10px
+}
+
+.clr_green {
+    color: green;
+}
+
+.clr_red {
+    color: red;
+}
+
+.crsr_pointer {
+    cursor: pointer;
 }
