Target Value conditional messages

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -491,9 +491,11 @@
         </strong>
       </h3>
       <span>Target Year: </span>
-      <nz-year-picker style="margin-left: 5px; min-width: 170px;" [(ngModel)]="activeItem.targetDate" nzPlaceHolder="Select target year"></nz-year-picker>
+      <nz-year-picker style="margin-left: 5px; min-width: 170px;" [(ngModel)]="activeItem.targetDate" nzPlaceHolder="Select target year"
+        (ngModelChange)="onTargetChange($event, activeItem)"
+      ></nz-year-picker>
       <span style="margin-left: 5px;">Target value:</span>
-      <input style="max-width: 200px; margin-left: 5px;" nz-input placeholder="Target value" [(ngModel)]="activeItem.targetValue" id="targetValueInput">
+      <nz-input-number style="max-width: 200px; margin-left: 5px;" [(ngModel)]="activeItem.targetValue" [nzStep]="1" id="targetValueInput"></nz-input-number>
     </div>
   </div>
   
